add first recipe content

--- a/recipes/brussel-sprouts.html
+++ b/recipes/brussel-sprouts.html
@@ -7,5 +7,23 @@
 </head>
 <body>
   <h1>Brussel Sprouts Recipe</h1>
+  <img src="https://www.allrecipes.com/thmb/QQ0ASDvOXL7RYqIOsE_QJ9bbm6M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4535996-parmesan-brussels-sprouts-Molly-1x1-1-1e3c534ba62d469bb273ed5338b65066.jpg" alt="finished brussel sprouts with parmesan cheese">
+  <h3>Description</h3>
+  <p>Brussel Sprouts that are cooked on a skillet then topped with paremsan cheese.</p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>1 tablespoon butter</li>
+    <li>2 cloves garlic, chopped</li>
+    <li>1 tablespoon butter</li>
+    <li>6 Brussels sprouts, trimmed and halved</li>
+    <li>1 tablespoon butter</li>
+    <li>2 tablespoons shredded Parmesan cheese, or more to taste</li>
+    <li>salt and ground black pepper to taste</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Heat a frying pan over medium heat until hot, 3 minutes. Melt 1 tablespoon butter; cook and stir garlic until fragrant, 30 seconds. Add 1 tablespoon butter and Brussels sprouts, cut-side down; cover and cook until golden brown, 4 to 6 minutes.</li>
+    <li>Flip Brussels sprouts; add 1 tablespoon butter. Cover and cook until other side is browned, about 3 more minutes. Transfer to a serving plate. Sprinkle with Parmesan cheese, salt, and black pepper.</li>
+  </ol>
 </body>
 </html>
