--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
   <h1>Odin Recipes</h1>
   <a href="./recipes/brussel-sprouts.html">Brussel Sprouts</a>
+  <a href="./recipes/cauliflower.html">Cauliflower</a>
+  <a href="./recipes/steak.html">Steak</a>
 </body>
 </html>
