--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="./recipes/brussel-sprouts.html">Brussel Sprouts</a>
-  <a href="./recipes/cauliflower.html">Cauliflower</a>
-  <a href="./recipes/steak.html">Steak</a>
+  <ul>
+    <li><a href="./recipes/brussel-sprouts.html">Brussel Sprouts</a></li>
+    <li><a href="./recipes/cauliflower.html">Cauliflower</a></li>
+    <li><a href="./recipes/steak.html">Steak</a></li>
+  </ul>
 </body>
 </html>
